--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -18,7 +18,7 @@
     <a class="sidebar-nav-item" href="https://majorhayden.com/">Résumé</a>
     <a class="sidebar-nav-item" href="https://github.com/major">GitHub</a>
     <a class="sidebar-nav-item" href="https://twitter.com/majorhayden">Twitter</a>
-
+    <a class="sidebar-nav-item" href="mailto:major@mhtx.net">Email</a>
   </nav>
 
   <div class="sidebar-item">
