--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -28,12 +28,11 @@
 
   <meta name="msvalidate.01" content="10AD8FC12EB5AEFA544B708A9D38BFFD" />
   <meta name="google-site-verification" content="tCM6cfzWPV6wZ2RZ9aFzZe1dl2TBGjYXjdTz1K8WUNU" />
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1115744-3"></script>
   <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-1115744-3');
+    window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+    ga('create', 'UA-1115744-3', 'auto');
+    ga('send', 'pageview');
   </script>
+  <script async src='https://www.google-analytics.com/analytics.js'></script>
 
 </head>
