--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -24,11 +24,14 @@
 
   <!-- Feeds -->
 {{ range .AlternativeOutputFormats -}}
-    {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
+    {{ printf `  <link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
 {{ end -}}
 
   <meta name="msvalidate.01" content="10AD8FC12EB5AEFA544B708A9D38BFFD" />
   <meta name="google-site-verification" content="tCM6cfzWPV6wZ2RZ9aFzZe1dl2TBGjYXjdTz1K8WUNU" />
+
+  {{ partial "twitter-card.html" . }}
+
   <script>
     window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
     ga('create', 'UA-1115744-3', 'auto');
