--- a/layouts/partials/twitter-card.html
+++ b/layouts/partials/twitter-card.html
@@ -3,5 +3,6 @@
   <meta name="twitter:site" content="{{- .Params.twitter.site -}}">
   <meta name="twitter:title" content="{{- .Params.twitter.title -}}">
   <meta name="twitter:image" content="{{ .Site.BaseURL }}{{- .Params.twitter.image -}}">
-{{ with .Params.twitter.image_alt -}}  <meta name="twitter:image:alt" content="{{- . -}}">{{- end }}
-{{ with .Params.twitter.creator -}}  <meta name="twitter:creator" content="{{- . -}}">{{- end }}
+  {{ with .Params.twitter.description -}}<meta name="twitter:description" content="{{- . -}}">{{- end }}
+  {{ with .Params.twitter.image_alt -}}<meta name="twitter:image:alt" content="{{- . -}}">{{- end }}
+  {{ with .Params.twitter.creator -}}<meta name="twitter:creator" content="{{- . -}}">{{- end }}
