Add gitlab.com link

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -18,6 +18,7 @@
     <a class="sidebar-nav-item {{ if eq .URL "/icanhazip-com-faq/" }} active {{ end }}" href="/icanhazip-com-faq">icanhazip.com FAQ</a>
     <a class="sidebar-nav-item" href="https://majorhayden.com/">Résumé</a>
     <a class="sidebar-nav-item" href="https://github.com/major">GitHub</a>
+    <a class="sidebar-nav-item" href="https://gitlab.com/majorhayden">GitLab</a>
     <a class="sidebar-nav-item" href="https://twitter.com/majorhayden">Twitter</a>
     <a class="sidebar-nav-item" href="https://www.slideshare.net/MajorHayden/presentations">Talks &amp; Presentations</a>
     <a class="sidebar-nav-item" href="mailto:major@mhtx.net">Email</a>
