Try out Cloudflare's web analytics

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,4 +3,6 @@ CC-BY-SA 4.0 &raquo;
 Made with <a href="https://gohugo.io/">Hugo</a> &raquo;
 Theme based on <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a><br>
 
-
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "aca54cb1322647b89c43a40751f02ce4"}'></script>
+<!-- End Cloudflare Web Analytics -->
