--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,7 @@
+<script async src="https://media.ethicalads.io/media/client/ethicalads.min.js"></script>
+<div data-ea-publisher="major-io" data-ea-type="text"></div>
+
 <hr>
 CC-BY-SA 4.0 &raquo;
 Made with <a href="https://gohugo.io/">Hugo</a> &raquo;
 Theme based on <a href="https://github.com/janraasch/hugo-bearblog/">Hugo ʕ•ᴥ•ʔ Bear</a><br>
-
-
