Use adaptive color scheme for Ethical Ads
Signed-off-by: Major Hayden <major@mhtx.net>

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,4 +3,4 @@
 </a>
 <nav>{{- partial "nav.html" . -}}</nav>
 <script async src="https://media.ethicalads.io/media/client/ethicalads.min.js"></script>
-<div data-ea-publisher="major-io" data-ea-type="text"></div>
+<div class="adaptive raised" data-ea-publisher="major-io" data-ea-type="text"></div>
