Add goatcounter analytics

--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -1,1 +1,1 @@
-<!-- <script defer data-domain="major.io" src="https://plausible.io/js/script.js"></script> -->
+<script data-goatcounter="https://major.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
