Use custom domain for fathom analytics

--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -1,1 +1,1 @@
-<script src="https://cdn.usefathom.com/script.js" data-site="ITDWDPMO" defer></script>
+<script src="https://metal-encouraging.major.io/script.js" data-site="ITDWDPMO" defer></script>
