Add goatcounter back in

--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -1,1 +1,1 @@
-<!-- nothing to see here -->
+<script data-goatcounter="https://major.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
