--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -1,1 +1,1 @@
-<script data-goatcounter="https://major.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+<script data-goatcounter="https://api.major.io/count" async src="//gc.zgo.at/count.js"></script>
