--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -1,1 +1,1 @@
-<script data-goatcounter="https://api.major.io/count" async src="/api.js"></script>
+<!-- <script data-goatcounter="https://api.major.io/count" async src="/api.js"></script> -->
