Add Cloudflare analytics

--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -1,1 +1,2 @@
-<!-- <script data-goatcounter="https://api.major.io/count" async src="/api.js"></script> -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+    data-cf-beacon='{"token": "405a0c0a5f5f40c5a5187031bcc49fe8"}'></script>
