--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -1,2 +1,12 @@
 <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
     data-cf-beacon='{"token": "405a0c0a5f5f40c5a5187031bcc49fe8"}'></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RB6LZKRGTQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RB6LZKRGTQ');
+</script>
