--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -1,8 +1,1 @@
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-RB6LZKRGTQ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-RB6LZKRGTQ');
-</script>
+<script src="https://cdn.usefathom.com/script.js" data-site="JEVRLXPL" defer></script>
