--- a/layouts/partials/extend-head.html
+++ b/layouts/partials/extend-head.html
@@ -1,2 +1,2 @@
 <!-- https://blog.joinmastodon.org/2024/07/highlighting-journalism-on-mastodon/ -->
-<meta name="fediverse:creator" content="@major@social.lol" />
+<meta name="fediverse:creator" content="@major@tootloop.com" />
